# swiss-vehicle-stats

./: .gitignore  AGENTS.md  LICENSE  METHODOLOGY.md  README.md  index.html  mappings.yaml  pyproject.toml  reference.yaml
.github/workflows/: cache-keepalive.yml  test.yml  update.yml
data/processed/: brand_bev_by_month.csv  brand_by_year.csv  brand_canton_bev.csv  brand_totals.csv  canton_ev_by_month.csv  color_totals.csv  continent_totals.csv  drive_by_month.csv  drive_totals.csv  fuel_by_month.csv  fuel_totals.csv  group_totals.csv  metadata.json  monthly_totals.csv  origin_totals.csv  projection.json  usage_totals.csv
reports/: 2026-02.md  2026-03.md  2026-04.md
scripts/: chart.py  download.py  process.py  project.py  report.py  validate.py
tests/: test_chart.py  test_download.py  test_process.py  test_project.py  test_report.py  test_utils.py  test_validate.py
